cmake_minimum_required(VERSION 3.17)
project(MySolution)
set(CMAKE_CXX_STANDARD 14)
add_executable(MySolution main.cpp)
cmake_minimum_required(VERSION 3.8)
project(gdal_example_cmake)
set(CMAKE_CXX_STANDARD 17)
include(cmake/Core.cmake)
find_package(GDAL REQUIRED)
find_library(GDAL_LIB_FILE GDAL)
get_filename_component(GDAL_LIB ${GDAL_LIB_FILE} DIRECTORY)
get_filename_component(INSTALLED_LIBS ${GDAL_LIB} DIRECTORY)
include_directories(${INSTALLED_LIBS}/include/)
single_executable(main.cpp)
single_executable_link_libraries(main.cpp ${GDAL_LIBRARIES})